--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Archivo', sans-serif;
 }
 
 a {
@@ -23,4 +22,20 @@ a {
     color: white;
     background: black;
   }
+}
+
+h1 {
+  font-weight: 900;
+}
+
+h2 {
+  font-weight: 900;
+  font-size: 5vh;
+}
+h3 {
+  font-weight: 900;
+}
+
+* {
+  text-transform: uppercase;
 }
