--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -22,7 +22,7 @@ a {
     color: white;
     background: black;
   }
-}
+} */
 
 h1 {
   font-weight: 900;
@@ -38,4 +38,9 @@ h3 {
 
 * {
   text-transform: uppercase;
+}
+
+h1, h2, h3, h4, h5, h6, p, .h1, .h2, .h3, .h4, .h5, .h6 {
+  margin-top: 0;
+  margin-bottom: 0;
 }
