--- a/styles/product.module.css
+++ b/styles/product.module.css
@@ -1,3 +1,108 @@
 .img_ctn {
+    background-color: #F5F5F5;
+    margin: 10px;
+    border-radius: 5px;
     position: relative;
+}
+
+.details {
+    background-color: #f5f5f5;
+    margin: 10px;
+    padding: 1vh;
+    border-radius: 5px;
+}
+
+.name_ctn {
+    background-color: #252525;
+    padding: 10px;
+    border-radius: 3px;
+    color: white;
+}
+
+.price_btn_ctn {
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.price_ctn {
+    background-color: #252525;
+    color: white;
+    padding: 10px;
+    border-radius: 3px;
+    margin-right: 10px;
+    font-family: Archivo;
+    font-size: 2vh;
+}
+
+.btn_ctn button {
+    border: none;
+    background-color: transparent;
+    padding: 10px;
+    color: white;
+    border-radius: 3px;
+    width: 100%;
+    font-family: Archivo;
+    font-size: 2vh;
+    cursor: pointer;
+}
+
+.btn_ctn {
+    background-color: #252525;
+    width: 100%;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.dsc {
+    background-color: #252525;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+
+.how {
+    background-color: #252525;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+
+.coution {
+    background-color: #252525;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.prohibited {
+    background-color: #252525;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+
+.about {
+    background-color: #252525;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.use {
+    background-color: #252525;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 10px;
 }
