--- a/styles/products.module.css
+++ b/styles/products.module.css
@@ -1,63 +1,84 @@
-.img_ctn {
-    position: relative;
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.gid {
-    display: grid;
-    grid-auto-flow: column;
-    justify-items: center;
+.img_ctn {
+  width: 95vw;
+  border-radius: 5px;
+  margin: 10px;
+  overflow: hidden;
+}
+
+.img_ctn image {
+  border-radius: 5px;
+}
+
+.grid {
+  /* display: grid;
+  align-content: center;
+  width: 95vw; */
+}
+
+.p_details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .details {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  width: 100%;
 }
 
-.name_container {
-    background-color: #252525;
-    color: white;
-    padding: 1vh;
-    margin-left: 10px;
-    margin-right: 10px;
-    border-radius: 3px;
-    cursor: pointer;
+.name {
+  background-color: #252525;
+  color: white;
+  padding: 1vh;
+  border-radius: 3px;
+  cursor: pointer;
+  width: 95vw;
 }
 .price_container {
-    background-color: #252525;
-    color: white;
-    padding: 1vh;
-    margin-left: 10px;
-    border-radius: 3px;
-    font-family: Archivo;
-    font-size: 2vh;
-    /* width: 100%; */
+  background-color: #252525;
+  color: white;
+  padding: 1vh;
+  margin-left: 10px;
+  border-radius: 3px;
+  font-family: Archivo;
+  font-size: 2vh;
+  /* width: 100%; */
 }
 
 .btn_container button {
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    padding: 10px;
-    background-color: #252525;
-    color: white;
-    border-radius: 3px;
-    width: 100%;
-    font-family: Archivo;
-    font-size: 2vh;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  padding: 10px;
+  background-color: #252525;
+  color: white;
+  border-radius: 3px;
+  width: 100%;
+  font-family: Archivo;
+  font-size: 2vh;
 }
 
 .btn_container {
-    background-color: #252525;
-    color: white;
-    border-radius: 3px;
-    width: 100%;
-    margin-right: 10px;
-    margin-left: 10px;
+  background-color: #252525;
+  color: white;
+  border-radius: 3px;
+  width: 100%;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
-
-.name {}
-.price {}
+.name {
+}
+.price {
+}
