--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -1,53 +1,151 @@
 .hero_h1 {
-    text-align: center;
-    font-size: 6vh;
-    font-family: 'Archivo', sans-serif;
-    font-weight: 900;
+  text-align: center;
+  font-size: 6vh;
+  font-family: "Archivo", sans-serif;
+  font-weight: 900;
 }
 
 .btns {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .btn {
-    color: #202020;
-    font-weight: 900;
-    font-size: 2.5vh;
-    border: none;
-    background-color: #f5f5f5;
-    margin: 1vh;
-    padding: 1vh;
-    border-radius: 3px;
-    cursor: pointer;
+  font-family: "Archivo", sans-serif;
+  color: #202020;
+  font-weight: 900;
+  font-size: 2.5vh;
+  border: none;
+  background-color: #f5f5f5;
+  margin: 1vh;
+  padding: 1vh;
+  border-radius: 3px;
+  cursor: pointer;
 }
 
 .img {
-    width: 100%;
-    height: 320px;
-    position: relative;
+  width: 100%;
+  height: 320px;
+  position: relative;
 }
 
 .hero {
-    background-color: #00370f;
-    color: white;
-    width: 95vw;
-    margin: 5px;
-    padding: 1vh;
-    border-radius: 5px;
+  background-color: #00370f;
+  color: white;
+  width: 95vw;
+  margin: 5px;
+  padding: 1vh;
+  border-radius: 5px;
 }
 
 .hero_p_ctn {
-    font-weight: 900;
-    font-size: 4vh;
-    text-align: center;
-    color: #b8b8b8;
-    text-transform: uppercase;
-    margin: 10px;
-    padding: 1vh;
+  font-weight: 900;
+  font-size: 4vh;
+  text-align: center;
+  color: #b8b8b8;
+  text-transform: uppercase;
+  margin: 10px;
+  padding: 1vh;
 }
 
 .txt_hlt {
-    color: #252525;
+  color: #252525;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+
+@media (min-width: 576px) {
+  .img {
+    width: 100%;
+    height: 460px;
+    position: relative;
+  }
+  .hero_h1 {
+    font-size: 8vh;
+    margin: 2vh;
+  }
+  .btn {
+    font-family: "Archivo", sans-serif;
+    font-weight: 900;
+    font-size: 4vh;
+    margin: 2vh;
+    padding: 2vh;
+  }
+  .btns {
+    margin-bottom: 3vh;
+  }
+  .hero_p_ctn {
+    font-size: 5vh;
+    display: grid;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+  }
+  .hero_p_ctn p {
+    width: 75vw;
+  }
+}
+
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    .main {
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+        align-items: center;
+    }
+
+    .hero {
+        max-width: 1200px;
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+        align-items: center;
+    }
+    
+    .img {
+        width: 100%;
+        height: 580px;
+        position: relative;
+      }
+      .hero_h1 {
+        font-size: 10vh;
+        margin: 2vh;
+        max-width: 1000px;
+      }
+      .btn {
+        font-family: "Archivo", sans-serif;
+        font-weight: 900;
+        font-size: 4vh;
+        margin: 2vh;
+        padding: 2vh;
+      }
+      .btns {
+        margin-bottom: 3vh;
+      }
+      .hero_p_ctn {
+        font-size: 8vh;
+        display: grid;
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+        align-items: center;
+        align-content: center;
+      }
+      .hero_p_ctn p {
+        width: 1000px;
+      }
 }
