--- a/styles/Popular.module.css
+++ b/styles/Popular.module.css
@@ -6,12 +6,15 @@
 
 .ctn {
     margin: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .img {
     position: relative;
-    width: 150px;
-    height: 150px;
+    width: 40vw;
+    height: 40vw;
     background-color: #d7d7d7;
     border-radius: 5px;
 }
@@ -23,4 +26,26 @@
     padding: 5px;
     border-radius: 5px;
     width: 100%;
+    margin-top: 1vh;
 }
+
+.ttl h3 {
+    text-align: center;
+    font-size: 3vh;
+    padding: 1vh;
+}
+
+
+/*---------------START WITH MOBILE FIRST--------------------*/
+ 
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {}
