--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -1,3 +1,7 @@
+.title {
+    font-size: 3vh;
+}
+
 .srv_ctn {
     display: flex;
     flex-direction: row;
@@ -11,6 +15,7 @@
     display: grid;
     align-items: center;
     padding: 1vh;
+    font-size: 2.3vh;
 }
 
 .title {
@@ -25,4 +30,40 @@
     background-color: #252525;
     color: white;
     border-radius: 5px;
+}
+
+/*---------------START WITH MOBILE FIRST--------------------*/
+ 
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+    .srv_ctn {
+        max-width: 600px;
+    }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    .srv_ctn {
+        max-width: 700px;
+    }
+    .srv_p {
+        font-size: 2.8vh;
+    }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    .srv_ctn {
+        max-width: 1100px;
+    }
+    .srv_p {
+        font-size: 4vh;
+    }
+    .title {
+        font-size: 5vh;
+    }
+    
 }
