--- a/styles/LinkToContact.module.css
+++ b/styles/LinkToContact.module.css
@@ -19,3 +19,29 @@
     font-size: 2vh;
     border-radius: 3px;
 }
+
+/*---------------START WITH MOBILE FIRST--------------------*/
+ 
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+    .ctn {
+        max-width: 80vw;
+    }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    .ctn {
+        max-width: 60vw;
+    }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    .ctn {
+        max-width: 40vw;
+    }
+}
