--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -13,14 +13,14 @@
 
 .btn {
   font-family: "Archivo", sans-serif;
-  color: #202020;
+  color: #006400;
   font-weight: 900;
   font-size: 2.5vh;
   border: none;
-  background-color: #f5f5f5;
+  background-color: #D0FF85;
   margin: 1vh;
   padding: 1vh;
-  border-radius: 3px;
+  border-radius: 50px;
   cursor: pointer;
 }
 
@@ -31,26 +31,39 @@
 }
 
 .hero {
-  background-color: #00370f;
-  color: white;
+  background-color: #006400;
+  color: #D0FF85;
   width: 95vw;
   margin: 5px;
   padding: 1vh;
-  border-radius: 5px;
+  border-radius: 50px;
 }
 
 .hero_p_ctn {
   font-weight: 900;
   font-size: 4vh;
   text-align: center;
-  color: #b8b8b8;
+  color: #006400;
   text-transform: uppercase;
   margin: 10px;
   padding: 1vh;
+  line-height: 10vw;
+  background-color: #D0FF85;
+  border-radius: 50px;
+  padding: 4vw;
 }
 
 .txt_hlt {
-  color: #252525;
+  background-color: #006400;
+  color: #D0FF85;
+  /* margin: 5px; */
+  padding: 0px 5px 0px 5px;
+  border-radius: 50px;
+}
+
+.warning {
+  font-size: 2vw;
+  line-height: 1;
 }
 
 /* Small devices (landscape phones, 576px and up) */
