--- a/styles/Popular.module.css
+++ b/styles/Popular.module.css
@@ -9,22 +9,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #D0FF85;
+    border-radius: 20px;
+    overflow: ;
 }
 
 .img {
     position: relative;
     width: 40vw;
     height: 40vw;
-    background-color: #d7d7d7;
-    border-radius: 5px;
+    background-color: #D0FF85;
+    border-radius: 20px;
 }
 
 
 .ttl {
-    background-color: #252525;
-    color: white;
+    background-color: #006400;
+    color: #D0FF85;
     padding: 5px;
-    border-radius: 5px;
+    border-radius: 50px;
     width: 100%;
     margin-top: 1vh;
 }
