--- a/styles/WhyUs.module.css
+++ b/styles/WhyUs.module.css
@@ -1,20 +1,22 @@
 .main {
-    background-color: #d8d8d8;
-    border-radius: 5px;
+    background-color: #D0FF85;
+    border-radius: 20px;
     padding: 10px;
     margin: 10px;
 }
 
 .title {
-    background-color: #252525;
-    border-radius: 5px;
-    color: white;
+    background-color: #006400;
+    border-radius: 20px;
+    color: #D0FF85;
     padding: 5px;
+    text-align: center;
 }
 
 .para {
     font-size: 3vh;
     margin: 5px;
+    color: #006400;
 }
 
 /*---------------START WITH MOBILE FIRST--------------------*/
