--- a/styles/products.module.css
+++ b/styles/products.module.css
@@ -8,7 +8,7 @@
 }
 
 .img_ctn {
-  border-radius: 5px;
+  border-radius: 2vw;
   margin: 10px;
   overflow: hidden;
   width: 320px;
@@ -16,7 +16,7 @@
 }
 
 .img_ctn image {
-  border-radius: 5px;
+  border-radius: 2vw;
 }
 
 .grid {
@@ -31,6 +31,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #D0FF85;
+  border-radius: 2vw;
+  padding-bottom: 2vw;
+  padding-right: 2vw;
+  padding-left: 2vw;
 }
 
 .details {
@@ -43,22 +48,20 @@
 }
 
 .name {
-  background-color: #252525;
-  color: white;
+  background-color: #006400;
+  color: #D0FF85;
   padding: 1vh;
-  border-radius: 3px;
+  border-radius: 2vw;
   cursor: pointer;
-
 }
 .price_container {
-  background-color: #252525;
-  color: white;
+  background-color: #006400;
+  color: #D0FF85;
   padding: 1vh;
   margin-left: 10px;
-  border-radius: 3px;
+  border-radius: 2vw;
   font-family: Archivo;
   font-size: 2vh;
-
 }
 
 .btn_container button {
@@ -66,17 +69,17 @@
   background-color: transparent;
   cursor: pointer;
   padding: 10px;
-  background-color: #252525;
-  color: white;
-  border-radius: 3px;
+  background-color: #006400;
+  color: #D0FF85;
+  border-radius: 2vw;
   font-family: Archivo;
   font-size: 2vh;
 }
 
 .btn_container {
-  background-color: #252525;
-  color: white;
-  border-radius: 3px;
+  background-color: #006400;
+  color: #D0FF85;
+  border-radius: 2vw;
   /* width: 100%; */
   margin-right: 10px;
   margin-left: 10px;
