--- a/styles/WhyUs.module.css
+++ b/styles/WhyUs.module.css
@@ -1,13 +1,13 @@
 .main {
     background-color: #D0FF85;
-    border-radius: 20px;
+    border-radius: 2vh;
     padding: 10px;
     margin: 10px;
 }
 
 .title {
     background-color: #006400;
-    border-radius: 20px;
+    border-radius: 2vh;
     color: #D0FF85;
     padding: 5px;
     text-align: center;
