final styles are done

--- a/styles/Faqs.module.css
+++ b/styles/Faqs.module.css
@@ -11,14 +11,14 @@
 }
 
 .qst {
-  font-size: 2rem;
+  font-size: 3vh;
   padding: 1vw;
   color: #006400;
 }
 
 .ans {
   padding: 1rem;
-  font-size: 3.5vw;
+  font-size: 2vh;
   background-color: #006400;
   color: #D0FF85;
   margin: 1vw;
