--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -3,12 +3,14 @@
   font-size: 6vh;
   font-family: "Archivo", sans-serif;
   font-weight: 900;
+  margin: 1vh;
 }
 
 .btns {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin: 1vh;
 }
 
 .btn {
@@ -19,7 +21,7 @@
   border: none;
   background-color: #D0FF85;
   margin: 1vh;
-  padding: 1vh;
+  padding: 2vh;
   border-radius: 50px;
   cursor: pointer;
 }
