--- a/styles/Popular.module.css
+++ b/styles/Popular.module.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     align-items: center;
     background-color: #D0FF85;
-    border-radius: 2vh;
+    border-radius: 2vw;
     overflow: ;
 }
 
@@ -19,7 +19,7 @@
     width: 40vw;
     height: 40vw;
     background-color: #D0FF85;
-    border-radius: 2vh;
+    border-radius: 2vw;
 }
 
 .lin {
@@ -34,7 +34,7 @@
     background-color: #006400;
     color: #D0FF85;
     padding: 5px;
-    border-radius: 2vh;
+    border-radius: 2vw;
     width: 100%;
     margin-top: 1vh;
     margin-bottom: 1vh;
