contact form added

--- a/styles/WhyUs.module.css
+++ b/styles/WhyUs.module.css
@@ -2,7 +2,7 @@
     background-color: #D0FF85;
     border-radius: 2vw;
     padding: 10px;
-    margin: 10px;
+    margin-bottom: 2vh;
 }
 
 .title {
