--- a/styles/Faqs.module.css
+++ b/styles/Faqs.module.css
@@ -5,7 +5,7 @@
 }
 
 .ctn {
-  margin: 2vw;
+  margin-bottom: 2vh;
   background-color: #D0FF85;
   border-radius: 2vw;
 }
@@ -18,7 +18,7 @@
 
 .ans {
   padding: 1rem;
-  font-size: 2vh;
+  font-size: 2.5vh;
   background-color: #006400;
   color: #D0FF85;
   margin: 1vw;
