--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -26,10 +26,13 @@
   cursor: pointer;
 }
 
-.img {
-  width: 100%;
-  height: 320px;
-  position: relative;
+
+
+.heroImg {
+  object-fit: contain;
+  object-position: center;
+  max-width: 800px;
+  height: 50%;
 }
 
 .hero {
